---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
2:16 error:Expected int but found bool
